--- a/서버용.ipynb
+++ b/서버용.ipynb
@@ -212,14 +212,15 @@
     "\n",
     "    if(j >= 0.8 * num):\n",
     "      save_img_path1 = \"gdrive/MyDrive/yolov7/data/val/images/\"\n",
+    "      idx = j + valid_index - int(0.8*num)\n",
     "    # 이미지 저장\n",
     "      %cd /content\n",
-    "      img_name = \"augmented_img\" + str(j + valid_index) + \".PNG\"\n",
+    "      img_name = \"augmented_img\" + str(int(idx)) + \".PNG\"\n",
     "      save_img_path = save_img_path1 + img_name\n",
     "      cv2.imwrite(save_img_path,transformed_image)\n",
     "      # label 저장\n",
     "      %cd \"gdrive/MyDrive/yolov7/data/val/labels\"\n",
-    "      text_name = \"augmented_img\" + str(j + valid_index) + \".txt\"\n",
+    "      text_name = \"augmented_img\" + str(int(idx)) + \".txt\"\n",
     "      with open(text_name,\"w\") as f:\n",
     "        flag = 0\n",
     "        for item in transformed_bboxes[0]:\n",
@@ -380,7 +381,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.3 32-bit",
    "language": "python",
    "name": "python3"
   },
@@ -395,6 +396,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b89e538c239f0fe9d7e71bce09c8a27359b4e7777369eb28b4fb936d142e831c"
+   }
   }
  },
  "nbformat": 4,
