--- a/서버용.ipynb
+++ b/서버용.ipynb
@@ -381,7 +381,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3.8.3 32-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -396,11 +396,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "b89e538c239f0fe9d7e71bce09c8a27359b4e7777369eb28b4fb936d142e831c"
-   }
   }
  },
  "nbformat": 4,
